Added svelte-adapter-github package

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"drizzle-orm": "^0.33.0",
 		"mysql2": "^3.11.0",
 		"pg": "^8.13.1",
-		"postgres": "^3.4.5"
+		"postgres": "^3.4.5",
+		"svelte-adapter-github": "^1.0.0-next.0"
 	}
 }
